--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-core:6.0.2'
     implementation 'jakarta.servlet:jakarta.servlet-api'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.zalando:problem:0.27.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
