--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-
-spring.graphql.graphiql.enabled=true
-spring.graphql.graphiql.path=/graphiql
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Log sql queries for Debugging purposes
 spring.jpa.show-sql=true
