--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 # Log sql queries for Debugging purposes
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
