--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:postgresql://master_db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.data.redis.host=bubble-api_cache
+spring.data.redis.port=6379
